# dino-sense

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
scripts/: extract_features.py
src/dino_sense/: __init__.py  data.py  model.py
