[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dino-sense"
version = "0.1.0"
description = "Self-supervised spatial understanding from satellite imagery using DINOv2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy<2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "umap-learn>=0.5.4",
    "gradio>=4.0",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "datasets>=2.14",
    "scipy>=1.11",
]

[project.optional-dependencies]
torchgeo = ["torchgeo>=0.5"]
dev = ["jupyter", "ipykernel", "ipywidgets"]

[tool.hatch.build.targets.wheel]
packages = ["src/dino_sense"]
